Functioning original tetris game!

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
     <title>React Tetris</title>
   </head>
   <body>
-    <div id="htmlText">
-      <h1>Welcome to React Tetris!</h1>
+    <!-- <div id="htmlText">
+      <h1 style="color: white">Welcome to React Tetris!</h1>
     </div>
-    <hr />
+    <hr /> -->
 
     <div id="app"></div>
   </body>
